unpackaged/main/default/objects/Contact/fields/AdditionalAccountsKey__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAccountsKey__c</fullName>
    <label>Additional Accounts Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>