unpackaged/main/default/objects/Contact/fields/BusinessObjective__c.field-meta.xml
<CustomField>
    <fullName>BusinessObjective__c</fullName>
    <label>Business Objective</label>
    <type>TextArea</type>
</CustomField>