unpackaged/main/default/objects/Contact/fields/Favorite_Sports_Teams__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Sports_Teams__c</fullName>
    <label>Favorite Sports Teams</label>
    <type>TextArea</type>
</CustomField>