unpackaged/main/default/objects/Contact/fields/FavoriteBeamProducts__c.field-meta.xml
<CustomField>
    <fullName>FavoriteBeamProducts__c</fullName>
    <label>Favorite Beam Products</label>
    <type>TextArea</type>
</CustomField>