unpackaged/main/default/objects/Contact/fields/FavoriteFoodorRestaurants__c.field-meta.xml
<CustomField>
    <fullName>FavoriteFoodorRestaurants__c</fullName>
    <label>Favorite Food or Restaurants</label>
    <type>TextArea</type>
</CustomField>