unpackaged/main/default/objects/Contact/fields/InstagramHandle__c.field-meta.xml
<CustomField>
    <fullName>InstagramHandle__c</fullName>
    <label>Instagram Handle</label>
    <length>30</length>
    <type>Text</type>
</CustomField>