unpackaged/main/default/objects/Contact/fields/InterestsHobbies__c.field-meta.xml
<CustomField>
    <fullName>InterestsHobbies__c</fullName>
    <label>Interests &amp; Hobbies</label>
    <type>TextArea</type>
</CustomField>