unpackaged/main/default/objects/Contact/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>This field is used for Contact consolidation. Contacts will up loaded with a unique key which can then be used to verify if new Contacts sent from the States via their excel templates need to be upserted or updated.</description>
    <label>Key</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>