unpackaged/main/default/objects/Contact/fields/PersonalGoals__c.field-meta.xml
<CustomField>
    <fullName>PersonalGoals__c</fullName>
    <label>Personal Goals</label>
    <type>TextArea</type>
</CustomField>