unpackaged/main/default/objects/Contact/fields/PreferredMethod__c.field-meta.xml
<CustomField>
    <fullName>PreferredMethod__c</fullName>
    <label>Preferred Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>