unpackaged/main/default/objects/Contact/fields/Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business__c</fullName>
    <label>Primary Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beam Suntory</fullName>
            </value>
            <value>
                <fullName>Suntory Beverage Food Europe</fullName>
            </value>
            <value>
                <fullName>I am an employee of one of these companies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>