unpackaged/main/default/objects/Contact/fields/SpousesName__c.field-meta.xml
<CustomField>
    <fullName>SpousesName__c</fullName>
    <label>Spouses Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>