unpackaged/main/default/objects/Contact/fields/TwitterHandle__c.field-meta.xml
<CustomField>
    <fullName>TwitterHandle__c</fullName>
    <label>Twitter Handle</label>
    <length>30</length>
    <type>Text</type>
</CustomField>