unpackaged/main/default/objects/Contact/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to verify if a self-registering user is a vendor</description>
    <label>Vendor</label>
    <type>Checkbox</type>
</CustomField>