unpackaged/main/default/objects/Contact/recordTypes/Bulk_Barrels_Contact.recordType-meta.xml
<RecordType>
    <fullName>Bulk_Barrels_Contact</fullName>
    <active>true</active>
    <description>Used for Bulk &amp; Barrels Contact</description>
    <label>Bulk Barrels Contact</label>
</RecordType>