unpackaged/main/default/objects/Contact/recordTypes/Registration_Approval.recordType-meta.xml
<RecordType>
    <fullName>Registration_Approval</fullName>
    <active>true</active>
    <description>This Record Type will be used to verify an Account from the self registration portal</description>
    <label>Registration Approval</label>
</RecordType>