unpackaged/main/default/objects/Contact/validationRules/VerifyRolesAreDifferent.validationRule-meta.xml
<ValidationRule>
    <fullName>VerifyRolesAreDifferent</fullName>
    <active>true</active>
    <description>Verify that the Primary Role and Secondary Role have different values</description>
    <errorConditionFormula>IF(TEXT( PrimaryRole__c ) = TEXT( SecondaryRole__c ), IF(ISBLANK(TEXT(PrimaryRole__c)), false, true), false)</errorConditionFormula>
    <errorMessage>Please ensure you are selecting different values for primary and secondary roles.</errorMessage>
</ValidationRule>