unpackaged/main/default/objects/Contact/listViews/Bulk_Spirits_Contacts.listView-meta.xml
<ListView>
    <fullName>Bulk_Spirits_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Bulk Spirit Contacts</label>
</ListView>